@@ -3488,4 +3488,7 @@ Dati delle applicazioni di business</block>
   <block id="d201913c731a2c485562d2197234ff40" category="paragraph">Completa alcuni passaggi per installare la classificazione BlueXP su un host Linux in un sito on-premise che non dispone di accesso a Internet, anche noto come _private mode_. Questo tipo di installazione, che utilizza uno script di installazione, non ha connettività al livello SaaS di BlueXP .</block>
   <block id="eea715e21fdd29a12f087199006074c7" category="paragraph">È anche possibile <block ref="76c224cc80265848284829e2886db42b" category="inline-link-macro-rx"></block>.</block>
   <block id="6ff9945c9b8d3c1700dad8f9a06d2ab2" category="list-text"><block ref="7ec82fd84f3aea81a9c6badedcfda318" category="inline-link-macro-rx"></block>, Nota anche come _private mode._ questo tipo di installazione, che utilizza uno script di installazione, non ha connettività al livello SaaS di BlueXP .</block>
+  <block id="5ae300808387123005a76abbd5a99f46" category="doc">Versione 1,38</block>
+  <block id="074f06822cc9864b1be34066c52ec21d" category="paragraph">Questa versione di classificazione BlueXP  include miglioramenti generali e correzioni dei bug.</block>
+  <block id="c33f35ab44944cc0d09e5bb702125592" category="section-title">16 dicembre 2024</block>
 </blocks>
