@@ -1,0 +1,9 @@
+= Versione 1,38
+:allow-uri-read: 
+
+
+
+
+=== Versione 1,38
+
+Questa versione di classificazione BlueXP  include miglioramenti generali e correzioni dei bug.
