@@ -18,6 +18,16 @@ Scopri le novità della classificazione BlueXP.
 
 
 
+== 16 dicembre 2024
+
+
+
+=== Versione 1,38
+
+Questa versione di classificazione BlueXP  include miglioramenti generali e correzioni dei bug.
+
+
+
 == 4 novembre 2024
 
 
